Fixed the checkbox alignment on the plan edit page

--- a/app/assets/stylesheets/dmponline/_forms.css.scss
+++ b/app/assets/stylesheets/dmponline/_forms.css.scss
@@ -29,6 +29,10 @@ form {
       }
     }
 
+	li.choice label {
+		width: 100%;
+		text-align: left;
+	}
 
     ol > li > li label { 
       line-height:100%; 
